{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 38,
  "lineage": "a63040a4-a380-906d-3485-7c342ccf0fe5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057171635e9d62298",
            "association_id": "eipassoc-09d738451791c8a53",
            "domain": "vpc",
            "id": "eipalloc-057171635e9d62298",
            "instance": "i-0f21068626192a616",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-074e4cddcdc178738",
            "private_dns": "ip-10-0-1-227.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.227",
            "public_dns": "ec2-54-79-244-114.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.244.114",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_db_instance.wordpressdb",
            "aws_db_subnet_group.RDS_subnet_grp",
            "aws_instance.wordpressec2",
            "aws_key_pair.mykey-pair",
            "aws_security_group.RDS_allow_rule",
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.prod-subnet-private-1",
            "aws_subnet.prod-subnet-private-2",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9fe0dec6325a30c",
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:instance/i-0f21068626192a616",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f21068626192a616",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074e4cddcdc178738",
            "private_dns": "ip-10-0-1-227.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "public_dns": "ec2-3-25-93-8.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.25.93.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f4d48a8397343be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0afaba75bbc3f848c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0627d7644842d9b97",
            "tags": {
              "Name": "Wordpress.web"
            },
            "tags_all": {
              "Name": "Wordpress.web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afaba75bbc3f848c"
            ]
          },
          "dependencies": [
            "aws_db_instance.wordpressdb",
            "aws_db_subnet_group.RDS_subnet_grp",
            "aws_key_pair.mykey-pair",
            "aws_security_group.RDS_allow_rule",
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.prod-subnet-private-1",
            "aws_subnet.prod-subnet-private-2",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:internet-gateway/igw-03447c9eee8285d6d",
            "id": "igw-03447c9eee8285d6d",
            "owner_id": "062714976861",
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:route-table/rtb-08e3976bc22d6b409",
            "id": "rtb-08e3976bc22d6b409",
            "owner_id": "062714976861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03447c9eee8285d6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def0fa7c195ed1f3",
            "route_table_id": "rtb-08e3976bc22d6b409",
            "subnet_id": "subnet-0627d7644842d9b97"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:security-group/sg-089a12fa6d27254e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089a12fa6d27254e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afaba75bbc3f848c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20221011014415848200000003",
            "name_prefix": "terraform-",
            "owner_id": "062714976861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ec2"
            },
            "tags_all": {
              "Name": "allow ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_allow_rule",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:security-group/sg-0afaba75bbc3f848c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afaba75bbc3f848c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221011014414567300000001",
            "name_prefix": "terraform-",
            "owner_id": "062714976861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh,http,https"
            },
            "tags_all": {
              "Name": "allow ssh,http,https"
            },
            "timeouts": null,
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:subnet/subnet-0d04b0e6f6b3bfbf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04b0e6f6b3bfbf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062714976861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:subnet/subnet-0fa326dd2f9c8b6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa326dd2f9c8b6e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062714976861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:subnet/subnet-0627d7644842d9b97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0627d7644842d9b97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "062714976861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07650e97b6c99b60f"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:vpc/vpc-07650e97b6c99b60f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0849efe975430f318",
            "default_route_table_id": "rtb-08833d302472d02da",
            "default_security_group_id": "sg-0a29d11ae5c80ca33",
            "dhcp_options_id": "dopt-8a6689e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07650e97b6c99b60f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08833d302472d02da",
            "owner_id": "062714976861"
          }
        }
      ]
    }
  ]
}